Fix nav menu: horizontal on desktop, hidden on mobile

--- a/style.css
+++ b/style.css
@@ -292,24 +292,6 @@ nav ul {
   }
 }
 
-    nav ul {
-      flex-direction: column;
-      gap: 1rem;
-      padding-top: 1rem;
-      align-items: center;
-    }
-  
-    nav ul li {
-      width: 100%;
-      text-align: center;
-    }
-  
-    nav ul li a {
-      display: inline-block;
-      width: 100%;
-      padding: 0.5rem 0;
-    }
-
   .step-icon {
     width: 50px;
     height: 50px;
